Added basics for navigation System

--- a/Server/index.html
+++ b/Server/index.html
@@ -14,55 +14,59 @@
 </head>
 
 <body>
-  <div>
-    <nav id="sidebar">
-      <div class="sidebar-header">
-        <h3>Bootstrap Sidebar</h3>
-      </div>
+  <div class="container-fluid p-0">
+    <div class="row no-gutters">
+      <div class="col-3">
+        <nav id="sidebar">
+          <div class="sidebar-header">
+            <h3>LHH</h3>
+          </div>
 
-      <ul class="list-unstyled components">
-        <p>Dummy Heading</p>
-        <li class="active">
-          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-          <ul class="collapse list-unstyled" id="homeSubmenu">
-            <li>
-              <a href="#">Home 1</a>
+          <ul class="list-unstyled components">
+            <li class="active">
+              <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+              <ul class="collapse list-unstyled" id="homeSubmenu">
+                <li>
+                  <a href="#" targetPage="IndexPage">Index</a>
+                </li>
+                <li>
+                  <a href="#" targetPage="AboutPage">About</a>
+                </li>
+                <li>
+                  <a href="#">Home 3</a>
+                </li>
+              </ul>
             </li>
             <li>
-              <a href="#">Home 2</a>
+              <a href="#">About</a>
             </li>
             <li>
-              <a href="#">Home 3</a>
+              <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
+              <ul class="collapse list-unstyled" id="pageSubmenu">
+                <li>
+                  <a href="#">Page 1</a>
+                </li>
+                <li>
+                  <a href="#">Page 2</a>
+                </li>
+                <li>
+                  <a href="#">Page 3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Portfolio</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
             </li>
           </ul>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-        <li>
-          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-          <ul class="collapse list-unstyled" id="pageSubmenu">
-            <li>
-              <a href="#">Page 1</a>
-            </li>
-            <li>
-              <a href="#">Page 2</a>
-            </li>
-            <li>
-              <a href="#">Page 3</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Portfolio</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <div id='app'></div>
+        </nav>
+      </div>
+      <div class="col-9">
+        <div id='app'></div>
+      </div>
+    </div>
   </div>
   <!-- You can also require other files to run in this process -->
   <script>
@@ -71,15 +75,6 @@
   <script>let $ = require( 'jquery' );</script>
   <script>require( 'popper.js' );</script>
   <script>require( 'bootstrap' );
-  </script>
-  <script>
-    $( document ).ready( function () {
-
-      $( '#sidebarCollapse' ).on( 'click', function () {
-        $( '#sidebar' ).toggleClass( 'active' );
-      } );
-
-    } );
   </script>
 </body>
 
