--- a/Server/src/AboutPage/AboutPage.html
+++ b/Server/src/AboutPage/AboutPage.html
@@ -1,1 +1,7 @@
-<p>About</p>
+<link rel="stylesheet" href="AboutPage.css">
+<p>About </p>
+
+<script>
+    var path = require('path')
+    require( path.join(__dirname , '../../dist/AboutPage/AboutPageRenderer.js') );
+</script>
