--- a/Server/src/IndexPage/IndexPage.html
+++ b/Server/src/IndexPage/IndexPage.html
@@ -1,1 +1,7 @@
+<link rel="stylesheet" href="IndexPage.css">
 <p>Index </p>
+
+<script>
+    var path = require('path')
+    require( path.join(__dirname , '../../dist/IndexPage/IndexPageRenderer.js') );
+</script>
