--- a/Server/index.html
+++ b/Server/index.html
@@ -64,7 +64,7 @@
         </nav>
       </div>
       <div class="col-9">
-        <div id='app'></div>
+        <webview id='app' nodeintegration></webview>
       </div>
     </div>
   </div>
