Added Manage Content webview and implementet page registrar

--- a/Server/index.html
+++ b/Server/index.html
@@ -58,7 +58,7 @@
               <a href="#">Portfolio</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#" targetPage="ManageContentPage">Manage Content</a>
             </li>
           </ul>
         </nav>
@@ -74,8 +74,7 @@
   </script>
   <script>let $ = require( 'jquery' );</script>
   <script>require( 'popper.js' );</script>
-  <script>require( 'bootstrap' );
-  </script>
+  <script>require( 'bootstrap' );</script>
 </body>
 
 </html>
